[gd_scene load_steps=7 format=3 uid="uid://be5dncu62dp1f"]

[ext_resource type="Script" uid="uid://d0u1bi12hcgy8" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bfoiee0v13ijs" path="res://gfx/2026-01-01 hero axe 16x16 gbc.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://ddb1b2lm680lt" path="res://axe_handler.gd" id="3_hqtel"]
[ext_resource type="PackedScene" uid="uid://lb4mlj0v4dmr" path="res://axe_swing.tscn" id="3_i3pqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(15.5, 15.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_onrkg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_i3pqv")

[node name="AxeHandler" type="Node2D" parent="."]
script = ExtResource("3_hqtel")

[node name="AxeSwing" parent="AxeHandler" instance=ExtResource("3_i3pqv")]
position = Vector2(0, 16)

[node name="SwingingTimer" type="Timer" parent="AxeHandler"]
wait_time = 0.2
one_shot = true

[connection signal="swing_axe" from="." to="AxeHandler" method="_on_player_swing_axe"]
[connection signal="timeout" from="AxeHandler/SwingingTimer" to="." method="_on_swinging_timer_timeout"]
